deploy/public-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-public
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 3000
      targetPort: grafana
