deploy/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-public
  namespace: school
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: frontend, port: { number: 80 } } }
    - host: school.89.169.152.212.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: frontend, port: { number: 80 } } }
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-public
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.89.169.152.212.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: monitoring-grafana, port: { number: 80 } } }
